<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/home"
            android:icon="@drawable/ic_home" />
        <item
            android:id="@+id/nav_newgame"
            android:title="@string/newgame"
            android:icon="@drawable/ic_newgame" />

    </group>

    <item android:title="Fiók">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_registration"
                    android:title="@string/registration"
                    android:icon="@drawable/ic_registration" />
                <item
                    android:id="@+id/nav_login"
                    android:title="@string/login"
                    android:icon="@drawable/ic_login" />
                <item
                    android:id="@+id/nav_profile"
                    android:title="@string/profile"
                    android:icon="@drawable/ic_account" />
                <item
                    android:id="@+id/nav_friends"
                    android:title="@string/friends"
                    android:icon="@drawable/ic_nav_friends" />
                <item
                    android:id="@+id/nav_duels"
                    android:title="@string/duels"
                    android:icon="@drawable/ic_duels" />
                <item
                    android:id="@+id/nav_history"
                    android:title="@string/history"
                    android:icon="@drawable/ic_history" />
                <item
                    android:id="@+id/nav_saved_questions"
                    android:title="@string/saved_questions"
                    android:icon="@drawable/ic_nav_bookmarks" />
                <item
                    android:id="@+id/nav_leaderboard"
                    android:title="@string/rankings"
                    android:icon="@drawable/ic_rankings" />
                <item
                    android:id="@+id/nav_logout"
                    android:title="@string/logout"
                    android:icon="@drawable/ic_logout" />
            </group>
        </menu>
    </item>
    <item android:title="Adminisztráció" android:id="@+id/nav_admin">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_list_questions"
                    android:title="@string/edit_questions"
                    android:icon="@drawable/ic_edit_question" />
                <item
                    android:id="@+id/nav_add_a_question"
                    android:title="@string/add_a_question"
                    android:icon="@drawable/ic_add_a_question" />
                <item
                    android:id="@+id/nav_list_categories"
                    android:title="@string/edit_categories"
                    android:icon="@drawable/ic_edit_question" />
                <item
                    android:id="@+id/nav_add_a_category"
                    android:title="@string/add_a_category"
                    android:icon="@drawable/ic_add_a_category" />
            </group>
        </menu>
    </item>

</menu>