<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:background="@drawable/tudastenger_bg2"
        tools:context=".RegistrationActivity"
        android:orientation="vertical"
        android:gravity="center">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:cardCornerRadius="20dp"
            android:layout_gravity="center">


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp"
                android:background="@color/cardview_light_background">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/registration"
                    android:textSize="36sp"
                    android:textAlignment="center"
                    android:layout_marginBottom="12dp"
                    android:textColor="@color/browne"
                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_shape_edittext"
                    android:id="@+id/usernameEditText"
                    android:hint="@string/username"
                    android:drawableLeft="@drawable/ic_user"
                    android:drawablePadding="8dp"
                    android:padding="8dp"
                    android:layout_margin="12dp"
                    android:inputType="text"
                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_shape_edittext"
                    android:id="@+id/emailEditText"
                    android:hint="@string/email"
                    android:drawableLeft="@drawable/ic_email"
                    android:drawablePadding="8dp"
                    android:padding="8dp"
                    android:layout_margin="12dp"
                    android:inputType="textEmailAddress"
                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_shape_edittext"
                    android:id="@+id/passwordEditText"
                    android:hint="@string/password"
                    android:drawableLeft="@drawable/ic_password"
                    android:drawablePadding="8dp"
                    android:padding="8dp"
                    android:layout_margin="12dp"
                    android:inputType="textPassword"
                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_shape_edittext"
                    android:id="@+id/passwordAgainEditText"
                    android:hint="@string/passwordAgain"
                    android:drawableLeft="@drawable/ic_password"
                    android:drawablePadding="8dp"
                    android:padding="8dp"
                    android:layout_margin="12dp"
                    android:inputType="textPassword"
                    />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/registration"
                    android:id="@+id/registrationButton"
                    android:layout_marginTop="16dp"
                    android:textColor="@color/white"
                    android:background="@drawable/custom_shape_rounded_button"
                    android:layout_marginBottom="12dp"
                    android:onClick="registration"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/loginRedirect"
                    android:text="@string/already_registered"
                    android:layout_gravity="center"
                    android:textSize="18sp"
                    />

            </LinearLayout>



        </androidx.cardview.widget.CardView>
</ScrollView>