<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@drawable/tudastenger_bg2"
    tools:context=".activities.ForgotPasswordActivity"
    android:orientation="vertical"
    android:gravity="center">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardCornerRadius="20dp"
        android:layout_gravity="center">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            android:background="@color/cardview_light_background">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Elfelejtett jelszó"
                android:textSize="36sp"
                android:textAlignment="center"
                android:layout_marginBottom="12dp"
                android:textColor="@color/browne"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_shape_edittext"
                android:id="@+id/emailEditText"
                android:hint="@string/email"
                android:drawableLeft="@drawable/ic_email"
                android:drawablePadding="8dp"
                android:padding="12dp"
                android:layout_margin="12dp"
                android:inputType="textEmailAddress"
                />

            <ProgressBar
                android:id="@+id/forgetPasswordProgressbar"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:visibility="gone" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reset_password"
                android:id="@+id/resetPasswordButton"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/browne"
                android:textColor="@color/white"
                android:background="@drawable/custom_shape_rounded_button"
                android:layout_marginBottom="12dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/logRedirect"
                android:text="@string/back_to_login_activity"
                android:layout_gravity="center"
                android:textSize="18sp"
                />

        </LinearLayout>



    </androidx.cardview.widget.CardView>

</ScrollView>
