<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@drawable/tudastenger_bg2"
    tools:context=".activities.RankEditUploadActivity"
    android:orientation="vertical"
    android:gravity="center">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardCornerRadius="20dp"
        android:layout_gravity="center">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/editBarLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone">

                <Button
                    android:id="@+id/backButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="#FFFFFF"
                    android:layout_marginRight="1dp"
                    android:background="@drawable/custom_shape_rectangle_button"
                    android:text="VISSZA" />

                <Button
                    android:id="@+id/deleteButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="#FFFFFF"
                    android:layout_marginLeft="1dp"
                    android:background="@drawable/custom_shape_rectangle_button"
                    android:text="TÖRLÉS" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/cardview_light_background"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:id="@+id/addRankTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/create_rank"
                    android:textSize="36sp"
                    android:textAlignment="center"
                    android:layout_marginBottom="12dp"
                    android:textColor="@color/browne"
                    />


                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_shape_edittext"
                    android:id="@+id/rankName"
                    android:hint="@string/rank_name"
                    android:padding="8dp"
                    android:layout_margin="12dp"
                    android:inputType="text"
                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_shape_edittext"
                    android:id="@+id/threshold"
                    android:hint="@string/threshold"
                    android:padding="8dp"
                    android:layout_margin="12dp"
                    android:inputType="number"
                    />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hozzaadas"
                    android:id="@+id/addRankButton"
                    android:layout_marginTop="16dp"
                    android:backgroundTint="@color/browne"
                    android:textColor="@color/white"
                    android:background="@drawable/custom_shape_rounded_button"
                    android:layout_marginBottom="12dp"
                    android:onClick="addRank"
                    />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</ScrollView>
